Bug 126774 - Electron affinity displayed wrong in gradient view
Summary: Electron affinity displayed wrong in gradient view
Status: RESOLVED FIXED
Alias: None
Product: kalzium
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Carsten Niehaus
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-05-05 09:18 UTC by dave
Modified: 2007-12-01 12:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dave 2006-05-05 09:18:33 UTC
Version:           1.4.4 (using KDE 3.5.2, Kubuntu Package 4:3.5.2-0ubuntu13 dapper)
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.15-21-686

Something is screwed with the gradient view:
The electron affinity is displayed times 100 (in centi eV ;). I would expect just plain eV.

All negative values are shown as "-1e-10". Gradient colors are correct.

The legend reads: range of value from 61 to -349. The smallest value found is -361ceV with Cl.
Comment 1 Carsten Niehaus 2006-08-31 09:17:19 UTC
I will try to fix this bug this weekend. I somehow just discovered it today, not sure why I didn't noticed the report before... Perhaps my spamfilter.
Comment 2 Carsten Niehaus 2006-09-03 17:33:48 UTC
Ok, one think I found out is that the unit is not eV but kj/mol. In Kalzium4 it is much better (more precise) and in eV
Comment 3 cniehaus 2007-12-01 12:58:38 UTC
SVN commit 743583 by cniehaus:

Actually, I fixed this issues ages ago. This is just adding the correct unit to the string. Without this new string, the message is wrong, this makes it a bugfix.

BUG: 126774


 M  +6 -3      kalziumutils.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=743583