Actually, I fixed this issues ages ago. This is just adding the correct unit to the string. Without this new string, the message is wrong, this makes it a bugfix.

BUG: 126774

svn path=/trunk/KDE/kdeedu/kalzium/; revision=743583